tests/baselines/reference/mutuallyRecursiveInference.errors.txt
tests/cases/compiler/mutuallyRecursiveInference.ts(9,5): error TS2610: Class 'L<X>' defines instance member property 'a', so extended class 'X' must use 'declare' to make it ambient.
tests/cases/compiler/mutuallyRecursiveInference.ts(10,5): error TS2610: Class 'L<X>' defines instance member property 'b', so extended class 'X' must use 'declare' to make it ambient.


==== tests/cases/compiler/mutuallyRecursiveInference.ts (2 errors) ====
    class T<A> {
        a: A;
        b: any
    }
    class L<RT extends { a: 'a' | 'b', b: any }> extends T<RT[RT['a']]> {
        m() { this.a }
    }
    class X extends L<X> {
        a: 'a' | 'b'
        ~
!!! error TS2610: Class 'L<X>' defines instance member property 'a', so extended class 'X' must use 'declare' to make it ambient.
        b: number
        ~
!!! error TS2610: Class 'L<X>' defines instance member property 'b', so extended class 'X' must use 'declare' to make it ambient.
        m2() {
            this.a
        }
    }
    